# MowerCodingChallenge

./: .gitignore  .pylintrc  Dockerfile  README.md  client.py  dev-requirements.txt  docker-compose.yml  k8s-deployment.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/lawnmower/: graphql_schema.py  models.py  simulator.py
src/lawnmower.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_graphql_schema.py  test_sim.py
