[project]
name = "lawnmower"
version = "0.0.1"
description = "Robotic lawnmower algorithm"
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["dev-requirements.txt"] }

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.coverage.run]
source = ['src/lawnmower']
omit = [
  "src/lawnmower/__init__.py",
  "src/lawnmower/__main__.py",
  "src/lawnmower/config.py",
]

[tool.coverage.html]
directory = "coverage"
